--- a/storyteller_lib/templates/base/genre_key_elements.jinja2
+++ b/storyteller_lib/templates/base/genre_key_elements.jinja2
@@ -14,7 +14,7 @@ Each element should be a concise phrase (5-10 words) describing a key aspect of 
 EXAMPLES OF GOOD ELEMENTS:
 - Mysterious crime that needs solving
 - Complex magic system with clear rules
-- Hero's journey from ordinary to extraordinary
+- Protagonist transformation through challenges
 - Political intrigue and power struggles
 - Advanced technology shaping society
 
