--- a/storyteller_lib/templates/languages/german/chapter_planning.jinja2
+++ b/storyteller_lib/templates/languages/german/chapter_planning.jinja2
@@ -39,7 +39,7 @@ KRITISCH: Sei sehr spezifisch bei Handlungsfortschritten. Anstatt generischer Be
 
 Diese Spezifität verhindert Wiederholungen und stellt ordentlichen Geschichtsfortschritt sicher.
 
-Stelle sicher, dass die Kapitel logisch fließen und den Bogen der Heldenreise beibehalten.
+Stelle sicher, dass die Kapitel logisch fließen und den Erzählbogen beibehalten.
 
 {% if language_guidance %}
 {{ language_guidance }}
