--- a/storyteller_lib/templates/languages/german/scene_writing_intelligent.jinja2
+++ b/storyteller_lib/templates/languages/german/scene_writing_intelligent.jinja2
@@ -20,4 +20,6 @@ Schreibe diese Szene jetzt und befolge dabei sowohl die Stilrichtlinien auf Buch
 5. So enden, dass die Geschichte vorangetrieben wird
 6. Sich konsistent mit dem etablierten Stil und Ton anfühlen
 
+Schreibe NUR den Szeneninhalt selbst - keine Meta-Kommentare, Analysen oder erklärende Notizen über die Szene.
+
 Schreibe die Szene jetzt:
