--- a/storyteller_lib/templates/languages/german/chapter_extraction.jinja2
+++ b/storyteller_lib/templates/languages/german/chapter_extraction.jinja2
@@ -6,7 +6,7 @@ Für jedes Kapitel bitte angeben:
 2. Einen Titel
 3. Eine detaillierte Gliederung (200-300 Wörter)
 4. Für jede der 3-5 Schlüsselszenen angeben:
-   - Beschreibung: Kurze Beschreibung des Geschehens
+   - Beschreibung: Die detaillierte Zusammenfassung in 3-5 Sätzen, was in dieser Szene passiert
    - Handlungsfortschritte: Liste spezifischer Handlungspunkte, die enthüllt/vorangebracht werden
    - Charakter lernt: Liste von "Charaktername: was er/sie lernt"
    - Erforderliche Charaktere: Liste der Charaktere, die auftreten müssen
