--- a/storyteller_lib/templates/languages/german/synthesize_scene_instructions.jinja2
+++ b/storyteller_lib/templates/languages/german/synthesize_scene_instructions.jinja2
@@ -62,10 +62,31 @@ AKTIVE HANDLUNGSSTRÄNGE:
 
 CHARAKTERE IN DER SZENE: {{ required_characters|join(', ') }}
 {% for char in characters[:4] %}
-- {{ char.name }}: {{ char.role }}, derzeit {{ char.emotional_state }}, motiviert durch {{ char.motivation }}
-{% if char.inner_conflicts %}  Innerer Konflikt: {{ char.inner_conflicts[0].description if char.inner_conflicts else '' }}{% endif %}
-{% if char.recent_knowledge %}  Kürzlich erfahren: {{ char.recent_knowledge[0].content }}{% endif %}
+- {{ char.name }} ({{ char.role }}): Derzeit {{ char.emotional_state }}
+  {%- if char.personality.traits %} | Charakterzüge: {{ char.personality.traits[:3]|join(', ') }}{% endif %}
+  {%- if char.motivation != 'Unknown' %} | Motiviert durch: {{ char.motivation }}{% endif %}
+  {%- if char.personality.fears %} | Ängste: {{ char.personality.fears[0] }}{% endif %}
+  {%- if char.inner_conflicts %} | Innerer Konflikt: {{ char.inner_conflicts[0].description if char.inner_conflicts[0] is mapping else char.inner_conflicts[0] }}{% endif %}
+  {%- if char.character_arc %} | Entwicklung: {{ char.character_arc.type }} ({{ char.character_arc.current_stage }}){% endif %}
+  {%- if char.physical_description %} | Erscheinung: {{ char.physical_description }}{% endif %}
 {% endfor %}
+
+{% if characters %}
+CHARAKTERTIEFE FÜR DIESE SZENE:
+{% for char in characters[:4] %}
+{{ char.name }}:
+{%- if char.personality.strengths %}
+  - Stärken: {{ char.personality.strengths[:2]|join(', ') }}{% endif %}
+{%- if char.personality.flaws %}
+  - Schwächen: {{ char.personality.flaws[:2]|join(', ') }}{% endif %}
+{%- if char.personality.values %}
+  - Werte: {{ char.personality.values[:2]|join(', ') }}{% endif %}
+{%- if char.evolution %}
+  - Jüngste Entwicklung: {{ char.evolution[-1] }}{% endif %}
+{%- if char.recent_knowledge %}
+  - Kürzlich erfahren: {{ char.recent_knowledge[0].content }}{% endif %}
+{% endfor %}
+{% endif %}
 
 {% if relationships %}
 WICHTIGE BEZIEHUNGEN:
