--- a/storyteller_lib/templates/base/synthesize_scene_instructions.jinja2
+++ b/storyteller_lib/templates/base/synthesize_scene_instructions.jinja2
@@ -63,9 +63,9 @@ ACTIVE STORY THREADS:
 CHARACTERS IN SCENE: {{ required_characters|join(', ') }}
 {% for char in characters[:4] %}
 - {{ char.name }} ({{ char.role }}): Currently {{ char.emotional_state }}
-  {%- if char.personality.traits %} | Key traits: {{ char.personality.traits[:3]|join(', ') }}{% endif %}
+  {%- if char.personality.get('traits') %} | Key traits: {{ char.personality.get('traits')[:3]|join(', ') }}{% endif %}
   {%- if char.motivation != 'Unknown' %} | Motivated by: {{ char.motivation }}{% endif %}
-  {%- if char.personality.fears %} | Fears: {{ char.personality.fears[0] }}{% endif %}
+  {%- if char.personality.get('fears') %} | Fears: {{ char.personality.get('fears')[0] }}{% endif %}
   {%- if char.inner_conflicts %} | Inner conflict: {{ char.inner_conflicts[0].description if char.inner_conflicts[0] is mapping else char.inner_conflicts[0] }}{% endif %}
   {%- if char.character_arc %} | Arc: {{ char.character_arc.type }} ({{ char.character_arc.current_stage }}){% endif %}
   {%- if char.physical_description %} | Appearance: {{ char.physical_description }}{% endif %}
@@ -75,12 +75,12 @@ CHARACTERS IN SCENE: {{ required_characters|join(', ') }}
 CHARACTER DEPTH FOR THIS SCENE:
 {% for char in characters[:4] %}
 {{ char.name }}:
-{%- if char.personality.strengths %}
-  - Strengths: {{ char.personality.strengths[:2]|join(', ') }}{% endif %}
-{%- if char.personality.flaws %}
-  - Flaws: {{ char.personality.flaws[:2]|join(', ') }}{% endif %}
-{%- if char.personality.values %}
-  - Values: {{ char.personality.values[:2]|join(', ') }}{% endif %}
+{%- if char.personality.get('strengths') %}
+  - Strengths: {{ char.personality.get('strengths')[:2]|join(', ') }}{% endif %}
+{%- if char.personality.get('flaws') %}
+  - Flaws: {{ char.personality.get('flaws')[:2]|join(', ') }}{% endif %}
+{%- if char.personality.get('values') %}
+  - Values: {{ char.personality.get('values')[:2]|join(', ') }}{% endif %}
 {%- if char.evolution %}
   - Recent development: {{ char.evolution[-1] }}{% endif %}
 {%- if char.recent_knowledge %}
